Wrote tests, fixed some warnings and added some files for testing.